--- a/index.html
+++ b/index.html
@@ -1,7 +1,98 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=.37">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="ajt_site/images/logo.ico">
+
+    <title>Andrew C. Turner</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
+	<link href="./bootstrap-3.3.2-dist/css/homestyle.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+  </head>
+  <body>
+
+
+    <!-- Nav bar -->
+    <div class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html">Andrew C. Turner</a>
+        </div>
+        <div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="research.html">Research interests</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a style="text-decoration:none" href="ajt_site/other/turnerCV.pdf" target="_blank">CV</a></li>
+            <li><a href="aboutme.html">About me</a></li>
+            <li><a href="photos.html">Photos</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Main header image -->
+    <div class="jumbotron"></div>
+
+
+    <!-- Container -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+        	<h2>Welcome</h2>
+          <p> I am a Miller Postdoctoral Fellow working with <a href="http://cohen.cchem.berkeley.edu/" target="_blank">Ron Cohen</a> and <a href="http://www.atmos.berkeley.edu/~inez/" target="_blank">Inez Fung</a> at the University of California at Berkeley.  I work on a variety of topics related to atmospheric chemistry, the carbon cycle, inverse modeling, and remote sensing.  Broadly, my research focuses on understanding how carbon cycles through the various reservoirs in the earth system (e.g., the atmosphere, ocean, and biosphere).  My recent work has focused on quantifying the processes driving decadal trends in atmospheric methane and hydroxyl, the main sink for methane and primary oxidant in the troposphere.</p>
+          <p><a class="btn btn-default" href="research.html" role="button">Research interests »</a></p>
+        </div>
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-5">
+          <h2>Contact</h2>
+          <p>
+            acturner (at) berkeley (dot) edu<br>
+            Department of Earth and Planetary Science/College of Chemistry<br>
+            University of California at Berkeley<br>
+            <a href="https://scholar.google.com/citations?user=tfmVgv0AAAAJ" target="_blank"> Google Scholar Citations</a><br>
+            <a href="https://orcid.org/0000-0003-1406-7372" target="_blank"> ORCID</a><br>
+            <a href="https://github.com/alexjturner" target="_blank"> GitHub</a><br>
+            <a href="https://www.linkedin.com/in/alex-turner-a4487a44" target="_blank">LinkedIn</a><br>
+          </p>
+
+        </div>
+      </div>
+
+      <hr>
+
+
+      <!-- Footer -->
+      <footer>
+        <p>© Andrew C. Turner - 2019</p>
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+  
+
+</body></html>
