--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="research.html">Research interests</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
-            <li><a href="aboutme.html">About me</a></li>
+            <!-- <li><a href="aboutme.html">About me</a></li> -->
           </ul>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-md-6">
         	<h2>Welcome</h2>
-          <p> I am a Miller Postdoctoral Fellow working with <a href="http://cohen.cchem.berkeley.edu/" target="_blank">Ron Cohen</a> and <a href="http://www.atmos.berkeley.edu/~inez/" target="_blank">Inez Fung</a> at the University of California at Berkeley.  I work on a variety of topics related to atmospheric chemistry, the carbon cycle, inverse modeling, and remote sensing.  Broadly, my research focuses on understanding how carbon cycles through the various reservoirs in the earth system (e.g., the atmosphere, ocean, and biosphere).  My recent work has focused on quantifying the processes driving decadal trends in atmospheric methane and hydroxyl, the main sink for methane and primary oxidant in the troposphere.</p>
+          <p> I am a Ph.D. candidate working with <a href="https://eps.berkeley.edu/people/daniel-stolper" target="_blank">Daniel Stolper</a>at the University of California, Berkeley. </p>
           <p><a class="btn btn-default" href="research.html" role="button">Research interests »</a></p>
         </div>
         <div class="col-md-1">
@@ -63,12 +63,12 @@
           <h2>Contact</h2>
           <p>
             acturner (at) berkeley (dot) edu<br>
-            Department of Earth and Planetary Science/College of Chemistry<br>
-            University of California at Berkeley<br>
-            <a href="https://scholar.google.com/citations?user=tfmVgv0AAAAJ" target="_blank"> Google Scholar Citations</a><br>
-            <a href="https://orcid.org/0000-0003-1406-7372" target="_blank"> ORCID</a><br>
-            <a href="https://github.com/alexjturner" target="_blank"> GitHub</a><br>
-            <a href="https://www.linkedin.com/in/alex-turner-a4487a44" target="_blank">LinkedIn</a><br>
+            Department of Earth and Planetary Science<br>
+            University of California, Berkeley<br>
+            <a href="https://scholar.google.com/citations?user=TDAhdMIAAAAJ" target="_blank"> Google Scholar Citations</a><br>
+            <a href="http://orcid.org/0000-0003-1187-2560" target="_blank"> ORCID</a><br>
+            <a href="https://www.linkedin.com/in/andrew-turner-1373a6149/" target="_blank">LinkedIn</a><br>
+            <a href="https://www.researchgate.net/profile/Andrew_Turner40" target="_blank">ResearchGate</a><br>
           </p>
 
         </div>
