--- a/publications.html
+++ b/publications.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=.37">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="ajt_site/images/logo.ico">
+    <link rel="icon" href="images/logo.ico">
 
-    <title>Alexander J. Turner</title>
+    <title>Andrew C. Turner</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,16 +34,15 @@
     <div class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">Alexander J. Turner</a>
+          <a class="navbar-brand" href="index.html">Andrew C. Turner</a>
         </div>
         <div>
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research interests</a></li>
             <li class="active"><a href="publications.html">Publications</a></li>
-            <li><a style="text-decoration:none" href="ajt_site/other/turnerCV.pdf" target="_blank">CV</a></li>
-            <li><a href="aboutme.html">About me</a></li>
-            <li><a href="photos.html">Photos</a></li>
+            <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
+            <!-- <li><a href="aboutme.html">About me</a></li> -->
           </ul>
         </div>
       </div>
@@ -58,7 +57,7 @@
       <div class="row">
         <div class="col-lg-12">
           <h3>Peer-Reviewed Publications</h3>
-          <h5><a href="#2019">2019</a> &nbsp;|&nbsp; <a href="#2018">2018</a> &nbsp;|&nbsp; <a href="#2017">2017</a> &nbsp;|&nbsp; <a href="#2016">2016</a> &nbsp;|&nbsp; <a href="#2015">2015</a> &nbsp;|&nbsp; <a href="#2015">2014</a> &nbsp;|&nbsp; <a href="#2013">2013</a> &nbsp;|&nbsp; <a href="#2012">2012</a></h5>
+          <h5> <a href="#2018">2018</a> &nbsp;|&nbsp; <a href="#2017">2017</a> &nbsp;|&nbsp;
 <hr>
 
 <!-- Submitted / Under Review / In Press -->
@@ -74,98 +73,19 @@
 -->
 
 
-<!-- 2019 -->
-<a name="2019"></a><h4>2019</h4>
-<ul>
-          <!-- Turner et al., PNAS (2019) -->
-          <li class="bib-item">
-            <b>Turner, A.J.*</b>, C. Frankenberg*, and E.A. Kort* (2019),
-            Interpreting contemporary trends in atmospheric methane,
-            <i>Proc. Natl. Acad. Sci.</i>, <i>116</i>, 2805-2813, doi:10.1073/pnas.1814297116. (*contributed equally)
-            | <a target="”_blank”" href="ajt_site/papers/Turner_PNAS_2019.pdf"><b>PDF</b></a>
-            &nbsp;<span data-badge-popover="right" data-badge-type="2" data-doi="10.1073/pnas.1814297116" data-condensed="true" data-hide-no-mentions="true" data-link-target="_blank" class="altmetric-embed" data-uuid="0895dda4-2f60-d0ee-d3e6-8f6e9ffe2c21"><a target="_blank" href="https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=55118994" rel="popover" data-content="<div>    <div style='padding-left: 10px; line-height:18px; border-left: 16px solid #74CFED;'>
-      <a class='link-to-altmetric-details-tab' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=55118994&amp;tab=twitter'>
-          Twitter (55)
-      </a>
-    </div>
-    <div style='padding-left: 10px; line-height:18px; border-left: 16px solid #D5E8F0;'>
-      <a class='link-to-altmetric-details-tab' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=55118994&amp;tab=reddit'>
-          Reddit (3)
-      </a>
-    </div>
-
-    <div class='altmetric-embed readers' style='margin-top: 10px;'>
-          <div class='altmetric-embed tip_mendeley'
-               style='padding-left: 10px; line-height:18px; border-left: 16px solid #A60000;'>
-              Mendeley (46)
-          </div>
-          <div class='altmetric-embed tip_citeulike'
-               style='padding-left: 10px; line-height:18px; border-left: 16px solid #BCD2EF;'>
-              CiteULike (1)
-          </div>
-    </div>
-    <div style='margin-top: 10px; text-align: center;'>
-        <a class='altmetric_details' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=55118994'>
-            See more details
-        </a>
-        |
-        <a href='javascript:void(0)' class='close-popover'>
-            Close this
-        </a>
-    </div>
-
-    <a class='altmetric_embed close-popover'
-       style='display: block; position: absolute; top: 10px; right: 15px; font-size: 1.2em; font-weight: bold; text-decoration: none; color: black; padding-bottom: 2em; padding-left: 2em;'
-       href='javascript:void(0)'>
-        ×
-    </a>
-</div>" style="display:inline-block;" data-badge-popover="right">
-        <img alt="Article has an altmetric score of 33" src="https://d1uo4w7k31k5mn.cloudfront.net/v2/33.png" width="88px" height="18px" style="border:0; margin:0; max-width: none;">
-</a></span></li> 
-</ul>
-
 
 <!-- 2018 -->
 <a name="2018"></a><h4>2018</h4>
 <ul>
-          <!-- Cusworth et al., ACP (2018) -->
+          <!-- Asselin et al., PCCP (2018) -->
           <li class="bib-item">
-            Cusworth, D.H., D.J. Jacob, J.X. Sheng, J. Benmergui, <strong>A.J. Turner</strong>, J. Brandman, L. White, and C.A. Randles (2018),
-            Detecting high-emitting methane sources in oil/gas fields using satellite observations,
-            <i>Atmos. Chem. Phys.</i>, <i>18</i>, 16885-16896, doi:10.5194/acp-18-16885-2018.
-            | <a target="”_blank”" href="ajt_site/papers/Cusworth_ACP_2018.pdf"><b>PDF</b></a>
-            &nbsp;<span data-badge-popover="right" data-badge-type="2" data-doi="10.5194/acp-18-16885-2018" data-condensed="true" data-hide-no-mentions="true" data-link-target="_blank" class="altmetric-embed" data-uuid="609a87ae-6c71-4f98-7416-b9ee963dc7f8"><a target="_blank" href="https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=51938585" rel="popover" data-content="<div>    <div style='padding-left: 10px; line-height:18px; border-left: 16px solid #ffd140;'>
-      <a class='link-to-altmetric-details-tab' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=51938585&amp;tab=blogs'>
-          Blogs (1)
-      </a>
-    </div>
-    <div style='padding-left: 10px; line-height:18px; border-left: 16px solid #74CFED;'>
-      <a class='link-to-altmetric-details-tab' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=51938585&amp;tab=twitter'>
-          Twitter (9)
-      </a>
-    </div>
+            Asselin, P., <strong>A.C. Turner</strong>, L. Bruel, V. Brenner, M-A. Gavreau, and M. Mons (2018),
+            Rovibrational laser jet-cooled spectroscopy of SF<sub>6</sub>-rare gas complexes in the <i>v</i><sub>3</sub> region of SF<sub>6</sub>,
+            <i>Physical Chemistry Chemical Physics</i>, <i>20</i>, 28105-28113, doi:10.1039/C8CP04387F
+            | <a target="”_blank”" href="https://doi.org/10.1039/C8CP04387F"><b>PDF</b></a>
 
-    <div class='altmetric-embed readers' style='margin-top: 10px;'>
-          <div class='altmetric-embed tip_mendeley'
-               style='padding-left: 10px; line-height:18px; border-left: 16px solid #A60000;'>
-              Mendeley (17)
-          </div>
-    </div>
-    <div style='margin-top: 10px; text-align: center;'>
-        <a class='altmetric_details' target='_blank' href='https://www.altmetric.com/details.php?domain=alexjturner.github.io&amp;citation_id=51938585'>
-            See more details
-        </a>
-        |
-        <a href='javascript:void(0)' class='close-popover'>
-            Close this
-        </a>
-    </div>
 
-    <a class='altmetric_embed close-popover'
-       style='display: block; position: absolute; top: 10px; right: 15px; font-size: 1.2em; font-weight: bold; text-decoration: none; color: black; padding-bottom: 2em; padding-left: 2em;'
-       href='javascript:void(0)'>
-        ×
-    </a>
+            
 </div>" style="display:inline-block;" data-badge-popover="right">
         <img alt="Article has an altmetric score of 15" src="https://d1uo4w7k31k5mn.cloudfront.net/v2/15.png" width="88px" height="18px" style="border:0; margin:0; max-width: none;">
 </a></span></li> 
