--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,9 @@
             Rovibrational laser jet-cooled spectroscopy of SF<sub>6</sub>-rare gas complexes in the <i>v</i><sub>3</sub> region of SF<sub>6</sub>,
             <i>Physical Chemistry Chemical Physics</i>, <i>20</i>, 28105-28113, doi:10.1039/C8CP04387F
             | <a target="”_blank”" href="https://doi.org/10.1039/C8CP04387F"><b>Link</b></a>
+          </div>
+      </div>
+    </div>
 
 
 <!-- 2017 -->
