--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
         <div>
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research interests</a></li>
+            <!-- <li><a href="research.html">Research interests</a></li> -->
             <li class="active"><a href="publications.html">Publications</a></li>
             <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
             <!-- <li><a href="aboutme.html">About me</a></li> -->
