--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=.37">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="./images/logo.ico">
+    <link rel="icon" href="images/logo.ico">
 
     <title>Andrew C. Turner</title>
 
@@ -35,7 +35,7 @@
         <div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research interests</a></li>
+            <!-- <li><a href="research.html">Research interests</a></li> -->
             <li><a href="publications.html">Publications</a></li>
             <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
             <!-- <li><a href="aboutme.html">About me</a></li> -->
