--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
             <li><a href="index.html">Home</a></li>
             <!-- <li><a href="research.html">Research interests</a></li> -->
             <li class="active"><a href="publications.html">Publications</a></li>
-            <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
+            <li><a style="text-decoration:none" href="Turner_CV.pdf" target="_blank">CV</a></li>
             <!-- <li><a href="aboutme.html">About me</a></li> -->
           </ul>
         </div>
