--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <!-- <li><a href="research.html">Research interests</a></li> -->
             <li><a href="publications.html">Publications</a></li>
-            <li><a style="text-decoration:none" href="Turner_CV_10_18.pdf" target="_blank">CV</a></li>
+            <li><a style="text-decoration:none" href="Turner_CV.pdf" target="_blank">CV</a></li>
             <!-- <li><a href="aboutme.html">About me</a></li> -->
           </ul>
         </div>
