--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,22 @@
 -->
 
 
+<!-- 2019 -->
+<a name="2019"></a><h4>2019</h4>
+<ul>
+          <!-- Asselin et al., PCCP (2018) -->
+          <li class="bib-item">
+            Gavreau, M-A., M. Mons, L. Bruel, A. Potapov, <strong>A.C. Turner</strong>,  V. Boudon, and P. Asselin (2019),
+            Conformational landscape of the SF<sub>6</sub> dimer as revealed by various free jet conditions,
+            <i>AIP Conference Proceedings</i>, <i>2132</i>, 030004, doi:10.1063/1.5119529
+            | <a target="”_blank”" href="https://doi.org/10.1063/1.5119529"><b>Link</b></a>
+          </div>
+      </div>
+    </div>
+
+
+
+
 
 <!-- 2018 -->
 <a name="2018"></a><h4>2018</h4>
